tests/ui/suggestions/enum-variant-arg-mismatch.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/enum-variant-arg-mismatch.rs:8:9
   |
LL |     Ident(&'a str),
   |     ----- found signature defined here
...
LL |     map(Sexpr::Ident);
   |     --- ^^^^^^^^^^^^ expected due to this
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected function signature `fn(String) -> _`
              found function signature `fn(&str) -> _`
note: required by a bound in `map`
  --> $DIR/enum-variant-arg-mismatch.rs:5:15
   |
LL | fn map<'a, F: Fn(String) -> Sexpr<'a>>(f: F) {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`
help: consider wrapping the function in a closure
   |
LL |     map(|arg0: String| Sexpr::Ident(/* &str */));
   |         ++++++++++++++             ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0631`.
